plugins {
    id 'java'
}

version '1.2'

wrapper {
    gradleVersion = '8.14'
    distributionType = Wrapper.DistributionType.ALL
}

java {
    sourceCompatibility = JavaVersion.VERSION_23
    targetCompatibility = JavaVersion.VERSION_23
}

test {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.google.apis', name: 'google-api-services-gmail', version: 'v1-rev20250630-2.0.0'
    implementation group: 'com.google.oauth-client', name: 'google-oauth-client-jetty', version: '1.39.0'
    implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.3'

    testImplementation(platform('org.junit:junit-bom:5.9.0'))
    testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': 'server.Server'
    }
    zip64 = true
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude "META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA"
}
